# python

./: .bash_history  RAG_test1.py  Transform_pipeline.py  crewai.py  test_langchain.py
.ipynb_checkpoints/: crewai-checkpoint.py  test_lanchain2-checkpoint.py
Langchain/: jupyter.ipynb  prompt.txt  prompt_save.yaml  prompt_template.py  prompt_template2.py
Langchain/sweetviz/: notebook.ipynb  test_panda_profiling.py  test_with_autoviz.py  titanic.py
Pandas/keras_second_trial/: keras_second_trial.sln
Pandas/keras_second_trial/keras_second_trial/: keras_second_trial.py  keras_second_trial.pyproj
PythonApplication1/: PythonApplication1.sln
PythonApplication1/PythonApplication1/: PythonApplication1.py  PythonApplication1.pyproj
RAG_test/: RAG_test1.py  Test_ollama.py  starter.py
RAG_test1/: RAG_test1.py
RL1/: RL1.sln
RL1/RL1/: RL1.pyproj  Readme.txt  module1.py  module2.py
demos/crawl4ai/: crawl4ai_1.py  jina_blog.py  jina_test_read.py  jinav0.py  scrapgraph.py  scrapgraph2.py  scrapgraph3.py  test.py
demos/projet1_use_filewritertool/: README.md  pyproject.toml
demos/projet1_use_filewritertool/src/projet1_use_filewritertool/: crew.py  main.py
demos/projet2_simplefile/: README.md  pyproject-old.toml
demos/projet2_simplefile/src/projet2_simplefile/: crew.py  main.py  test.md
demos/projet2_simplefile/src/projet2_simplefile/config/: agents_v1  tasks.yaml  tasks_v1
demos/projet2_simplefilev2/: pyproject.toml
demos/projet2_simplefilev2/src/projet2_simplefile/: crew.py  main.py  report.md
demos/projet2_simplefilev2/src/projet2_simplefile/config/: tasks.yaml
demos/projet3_filewritertool/: README.md  pyproject.toml
demos/projet3_filewritertool/src/projet3_filewritertool/: AI_LLMs_2025.md  crew.py  main.py  report.json  report.md  test.json  test.md  test1.py
demos/projet3_filewritertool/src/projet3_filewritertool/config/: agents.yaml  tasks.yaml
first_one/: README.md  pyproject-old.toml  pyproject.toml  report.md
first_one/src/first_one/: crew.py  main.py
search_web/: README.md  pyproject-old.toml
search_web/CrewAI/: Scraper.md  Search.md  test_1.py
search_web/CrewAI/ScrapWebsite/: ScrapWebsite.py  report.md
search_web/src/search_web/: crew.py  main.py  report.md
search_web/src/search_web/config/: agents.yaml  tasks.yaml
test_one_agent/: README.md  pyproject.toml  report.md
test_one_agent/src/test_one_agent/: crew.py  main.py
test_one_agent/src/test_one_agent/config/: agents.yaml  tasks.yaml
