[project]
name = "test_one_agent"
version = "0.1.0"
description = "test_one_agent using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0",
]

[project.scripts]
test_one_agent = "test_one_agent.main:run"
run_crew = "test_one_agent.main:run"
train = "test_one_agent.main:train"
replay = "test_one_agent.main:replay"
test = "test_one_agent.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
